src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <defaultValue>&quot;varun.prabhakar@extentor.com&quot;</defaultValue>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>&quot;+ 91 9945642278&quot;</defaultValue>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <defaultValue>&quot;Varun Prabhakar&quot;</defaultValue>
        <label>Prepared By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <label>Salesforce Edition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Tax__c</fullName>
        <formula>Subtotal  *  0.1236</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax(12.36%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>TotalPrice  +  Service_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <description>This Record Type Is Used To Keep Track Of Quote</description>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Order</fullName>
        <active>true</active>
        <description>This Record Type Is Used Keep Track Of Work Order.</description>
        <label>Work Order</label>
    </recordTypes>
</CustomObject>